[gd_scene load_steps=14 format=3 uid="uid://1wrio32jtlpa"]

[ext_resource type="Texture2D" uid="uid://dpeb8egh27bt6" path="res://Assets/Images/Menus/Panels/PanelHQ.png" id="1_ol5nd"]
[ext_resource type="Script" path="res://Assets/Levels/MainMenu.gd" id="1_os6by"]
[ext_resource type="Texture2D" uid="uid://cp05egbg0061x" path="res://Assets/Images/Menus/Buttons/Button_Confirm.png" id="2_jtq6l"]
[ext_resource type="Texture2D" uid="uid://bivu8sir28qdk" path="res://Assets/Images/Menus/Buttons/Button.png" id="3_f4535"]
[ext_resource type="PackedScene" uid="uid://b81wvc4ouhea3" path="res://Assets/Audio/menu_music.tscn" id="5_ma8uo"]
[ext_resource type="Texture2D" uid="uid://drftjv576d5sk" path="res://Assets/Images/Menus/TITLEREAL.png" id="6_8yuu4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xrufs"]
texture = ExtResource("1_ol5nd")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3gvba"]
texture = ExtResource("2_jtq6l")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2mrop"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3a2r4"]
texture = ExtResource("3_f4535")
texture_margin_left = 50.0
texture_margin_top = 20.0
texture_margin_right = 50.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_clmjf"]
texture = ExtResource("2_jtq6l")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0a1k"]
texture = ExtResource("3_f4535")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b8tot"]
texture = ExtResource("3_f4535")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_os6by")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xrufs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = -21.0
offset_right = 68.0
offset_bottom = 221.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="StartNewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_3gvba")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2mrop")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_3a2r4")
theme_override_styles/hover = SubResource("StyleBoxTexture_clmjf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s0a1k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_b8tot")
theme_override_styles/normal = SubResource("StyleBoxTexture_s0a1k")
text = "Start New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_3gvba")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2mrop")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_3a2r4")
theme_override_styles/hover = SubResource("StyleBoxTexture_clmjf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s0a1k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_b8tot")
theme_override_styles/normal = SubResource("StyleBoxTexture_s0a1k")
text = "Load Game"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_3gvba")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2mrop")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_3a2r4")
theme_override_styles/hover = SubResource("StyleBoxTexture_clmjf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s0a1k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_b8tot")
theme_override_styles/normal = SubResource("StyleBoxTexture_s0a1k")
text = "Options
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_3gvba")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_2mrop")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_3a2r4")
theme_override_styles/hover = SubResource("StyleBoxTexture_clmjf")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s0a1k")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_b8tot")
theme_override_styles/normal = SubResource("StyleBoxTexture_s0a1k")
text = "Quit To Desktop
"

[node name="MenuMusic" parent="." instance=ExtResource("5_ma8uo")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(544, 93)
texture = ExtResource("6_8yuu4")

[connection signal="pressed" from="VBoxContainer/StartNewGameButton" to="." method="_on_start_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
